backend/api/tests/integration/locale/snapshots/integration__locale__entry__list_single_bundle_by_bundle.snap
---
source: tests/integration/locale/entry.rs
expression: body
---
{
  "bundles": {
    "8359a48a-7c67-11eb-a0d7-0fd74777a62c": [
      {
        "id": 2,
        "bundleId": "8359a48a-7c67-11eb-a0d7-0fd74777a62c",
        "section": "A",
        "itemKindId": "1623eab4-7c68-11eb-a0d7-5f27277abc1b",
        "english": "Entry #2",
        "hebrew": null,
        "status": "approved",
        "zeplinReference": null,
        "comments": null,
        "inApp": true,
        "inElement": true,
        "inMock": false
      }
    ]
  }
}
